Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24364

Setting cacheBuffer in ListView makes delegates to be drawn at wrong position at first.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0
    • 5.0.0
    • None
    • Ubuntu 11.04 , Qt5 03883c22264df65586db0a603569c9d196e06034
    • b01aec8e81a5839ee520ed4e6e4fedf1d2ec419a

    Description

      Setting cacheBuffer in ListView causes delegates quickly to appear at top position of the list.
      Run attached qml to see the problem.

      Attachments

        For Gerrit Dashboard: QTBUG-24364
        # Subject Branch Project Status CR V

        Activity

          People

            martjone Martin Jones (closed Nokia identity) (Inactive)
            kiilholm Mikko Kiilholma
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes