cacheBuffer makes delegates appear briefly in wrong position

Set delegates that are created asynchronously to non-visible.  This
would have happened the next time addVisibleItems() was called.

Task-number: QTBUG-24364
Change-Id: I4b628bef186c8c41bd6a4d9e4ac402d59bcb4972
Reviewed-by: Bea Lam <bea.lam@nokia.com>